# Linkedin_Automation

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  install.sh  linkedin_profiles.csv  requirements.txt  rustfmt.toml  test_profiles.csv
browser_analysis/: main.py
browser_analysis/analysis/: extract_api_patterns.py  extract_auth_tokens.py  generate_automation_spec.py
browser_analysis/browser/: __init__.py  launcher.py  session_manager.py
browser_analysis/config/: __init__.py  config.py
browser_analysis/interceptor/: __init__.py  network_logger.py  request_filter.py
browser_analysis/storage/: __init__.py  dedup.py  json_writer.py
src/: config.rs  error.rs  lib.rs  main.rs
src/automation/: connection_sender.rs  csv_reader.rs  discovery.rs  human_behavior.rs  mod.rs  runner.rs  selectors.rs  types.rs
src/automation/csv_reader/: mod.rs  tests.rs
src/automation/humanizer/: breaks.rs  decoy.rs  delay.rs  mod.rs  window.rs
src/browser/: mod.rs  network_monitor.rs  session.rs  types.rs
src/linkedin_api/: cdp.rs  client.rs  login.rs  mod.rs  session.rs  types.rs
src/linkedin_api/client/: decoys.rs  mod.rs
