[package]
name = "linkedin_automation"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "LinkedIn network automation and analysis tool"
license = "MIT"
repository = "https://github.com/yourusername/linkedin_automation"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Browser automation - WebDriver protocol (recommended for LinkedIn)
thirtyfour = "0.33"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
dotenv = "0.15"
envy = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.7"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# CSV parsing
csv = "1.3"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
url = "2.5"
regex = "1.11"
rand = "0.8"

# Caching
moka = { version = "0.12", features = ["future"] }

# HTML parsing
scraper = "0.21"

# WebSocket for CDP
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
mockito = "1.6"
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
